sanger/sites/reproductivecellatlas/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reproductivecellatlas
spec:
  selector:
    matchLabels:
      app: reproductivecellatlas
  replicas: 2
  template:
    metadata: 
      name: reproductivecellatlas
      labels:
        app: reproductivecellatlas
    spec:
      volumes:
        - name: indexfiles
          emptyDir: {}
      containers:
      - image: nginx
        imagePullPolicy: IfNotPresent
        name: reproductivecellatlas
        ports:
        - containerPort: 80
          name: http
        command: ["/bin/sh", "-c", "cp -r /data/kubespray/sanger/sites/reproductivecellatlas/site/. /usr/share/nginx/html/ && nginx -g 'daemon off;'"]
        volumeMounts:
          - name: indexfiles
            mountPath: /data
        resources:
          requests:
            memory: "128M"
            cpu: "0.1"
          limits:
            memory: "512M"
            cpu: "0.7"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reproductivecellatlas-endometrium-all
spec:
  selector:
    matchLabels:
      app: reproductivecellatlas-endometrium-all
  replicas: 1
  template:
    metadata: 
      name: reproductivecellatlas-endometrium-all
      labels:
        app: reproductivecellatlas-endometrium-all
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: reproductivecellatlas-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.0
        imagePullPolicy: IfNotPresent
        name: reproductivecellatlas-endometrium-all
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["/bin/sh"]
        args: ["-c", "yes | cellxgene launch /data/endometrium_all.h5ad -t 'Endometrium all' --host 0.0.0.0 --port 5005 --disable-annotations --scripts https://www.reproductivecellatlas.org/zxtm/piwik2.js"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "2Gi"
            cpu: "0.5"
          limits:
            memory: "16Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reproductivecellatlas-endometrium-epithelial
spec:
  selector:
    matchLabels:
      app: reproductivecellatlas-endometrium-epithelial
  replicas: 1
  template:
    metadata: 
      name: reproductivecellatlas-endometrium-epithelial
      labels:
        app: reproductivecellatlas-endometrium-epithelial
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: reproductivecellatlas-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.0
        imagePullPolicy: IfNotPresent
        name: reproductivecellatlas-endometrium-epithelial
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["/bin/sh"]
        args: ["-c", "yes | cellxgene launch /data/endometrium_epithelial.h5ad -t 'Endometrium epithelial' --host 0.0.0.0 --port 5005 --disable-annotations --scripts https://www.reproductivecellatlas.org/zxtm/piwik2.js"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "1Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reproductivecellatlas-endometrium-nuclei
spec:
  selector:
    matchLabels:
      app: reproductivecellatlas-endometrium-nuclei
  replicas: 1
  template:
    metadata: 
      name: reproductivecellatlas-endometrium-nuclei
      labels:
        app: reproductivecellatlas-endometrium-nuclei
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: reproductivecellatlas-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.0
        imagePullPolicy: IfNotPresent
        name: reproductivecellatlas-endometrium-nuclei
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["/bin/sh"]
        args: ["-c", "yes | cellxgene launch /data/endometrium_nuclei.h5ad -t 'Endometrium nuclei' --host 0.0.0.0 --port 5005 --disable-annotations --scripts https://www.reproductivecellatlas.org/zxtm/piwik2.js"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "256M"
            cpu: "0.5"
          limits:
            memory: "3Gi"
            cpu: 1
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reproductivecellatlas-endometrium-organoid
spec:
  selector:
    matchLabels:
      app: reproductivecellatlas-endometrium-organoid
  replicas: 1
  template:
    metadata: 
      name: reproductivecellatlas-endometrium-organoid
      labels:
        app: reproductivecellatlas-endometrium-organoid
    spec:
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: reproductivecellatlas-pvc
      containers:
      - image: quay.io/cellgeni/cellxgene:0.16.0
        imagePullPolicy: IfNotPresent
        name: reproductivecellatlas-endometrium-organoid
        ports:
        - containerPort: 5005
          name: cellxgene
        command: ["/bin/sh"]
        args: ["-c", "yes | cellxgene launch /data/endometrium_organoid.h5ad -t 'Endometrium organoid' --host 0.0.0.0 --port 5005 --disable-annotations --scripts https://www.reproductivecellatlas.org/zxtm/piwik2.js"]
        volumeMounts:
          - name: data
            mountPath: /data
        resources:
          requests:
            memory: "2Gi"
            cpu: "0.5"
          limits:
            memory: "15Gi"
            cpu: 1
---
