sanger/sites/reproductivecellatlas/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: reproductivecellatlas
  labels:
    app: reproductivecellatlas
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: http
  selector:
    app: reproductivecellatlas
---
apiVersion: v1
kind: Service
metadata:
  name: reproductivecellatlas-endometrium-all
  labels:
    app: reproductivecellatlas-endometrium-all
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: reproductivecellatlas-endometrium-all
---
apiVersion: v1
kind: Service
metadata:
  name: reproductivecellatlas-endometrium-stromal
  labels:
    app: reproductivecellatlas-endometrium-stromal
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: reproductivecellatlas-endometrium-stromal
---
apiVersion: v1
kind: Service
metadata:
  name: reproductivecellatlas-endometrium-epithelial
  labels:
    app: reproductivecellatlas-endometrium-epithelial
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: reproductivecellatlas-endometrium-epithelial
---
apiVersion: v1
kind: Service
metadata:
  name: reproductivecellatlas-endometrium-epithelial-regenerative
  labels:
    app: reproductivecellatlas-endometrium-epithelial-regenerative
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: reproductivecellatlas-endometrium-epithelial-regenerative
---
apiVersion: v1
kind: Service
metadata:
  name: reproductivecellatlas-endometrium-organoid
  labels:
    app: reproductivecellatlas-endometrium-organoid
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: cellxgene
  selector:
    app: reproductivecellatlas-endometrium-organoid
---
