sanger/sites/reproductivecellatlas/ingress.yaml
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: reproductivecellatlas
spec:
  virtualhost:
    fqdn: www.reproductivecellatlas.org
  routes:
    - match: /
      services:
        - name: reproductivecellatlas
          port: 80
    - match: /static
      services:
        - name: reproductivecellatlas-endometrium-epithelial
          port: 80
    - match: /endometrium-all
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-all
          port: 80
    - match: /endometrium-stromal
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-stromal
          port: 80
    - match: /endometrium-epithelial
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-epithelial
          port: 80
    - match: /endometrium-nuceli
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-nuceli
          port: 80
    - match: /endometrium-organoid
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-organoid
          port: 80
---
apiVersion: contour.heptio.com/v1beta1
kind: IngressRoute
metadata:
  name: reproductivecellatlas-cellgeni
spec:
  virtualhost:
    fqdn: reproductivecellatlas.cellgeni.sanger.ac.uk
  routes:
    - match: /
      services:
        - name: reproductivecellatlas
          port: 80
    - match: /static
      services:
        - name: reproductivecellatlas-endometrium-epithelial
          port: 80
    - match: /endometrium-all
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-all
          port: 80
    - match: /endometrium-stromal
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-stromal
          port: 80
    - match: /endometrium-epithelial
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-epithelial
          port: 80
    - match: /endometrium-nuceli
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-nuceli
          port: 80
    - match: /endometrium-organoid
      prefixRewrite: "/" 
      services:
        - name: reproductivecellatlas-endometrium-organoid
          port: 80
---
